src/test/ui/issue-42954.stderr
error: `<` is interpreted as a start of generic arguments for `u32`, not a comparison
  --> $DIR/issue-42954.rs:13:19
   |
13 |         $i as u32 < 0
   |                   ^ - interpreted as generic arguments
   |                   |
   |                   not interpreted as comparison
...
19 |     is_plainly_printable!(c);
   |     ------------------------- in this macro invocation
   |
help: if you want to compare the casted value then write:
   |
13 |         ($i as u32) < 0
   |         ^^^^^^^^^^^

error: aborting due to previous error

